--- a/creation.html
+++ b/creation.html
@@ -26,7 +26,7 @@
               <p>Unity学習も兼ねてかなりまったりして4週間くらいで作ったシューティングゲーム。<br>
                 箱1コン対応。</p>
               <div style="text-align: left;"><a
-                          href="../Web/Creation/RAYS_RUSH.zip">
+                          href="Creation/RAYS_RUSH.zip">
                           ダウンロード</a><br>
                 <br>
             </div>
