--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <meta content="text/html;" charset="utf-8" http-equiv="content-type">
         <title>るみね＿せんす。の創作物置場</title>
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon"></link>
+        <link rel="shortcut icon" href="../img/favicon.ico" type="image/vnd.microsoft.icon"></link>
         <link rel="stylesheet" type="text/css" href="data.css" /></link>
 
 
