ちょいと編集

--- a/creation.html
+++ b/creation.html
@@ -1,14 +1,14 @@
 <html><head>
 
     <meta content="text/html;" charset="utf-8" http-equiv="content-type">
-        <title>るみね＿せんす。が作ったもの</title>
+        <title>LaIが作ったもの</title>
         <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon"></link>
         <link rel="stylesheet" type="text/css" href="data.css" /></link>
 
 
 
 </head><body>
-    <big><big>るみね＿せんす。の創作物置場</big></big><br>
+    <big><big>LaIの創作物置場</big></big><br>
     <h1>
         <ul>
             <li><a href="index.html">トップページ</a></li>
@@ -27,6 +27,20 @@
                 箱1コン対応。</p>
               <div style="text-align: left;"><a
                           href="Creation/RAYS_RUSH.zip">
+                          ダウンロード</a><br>
+                <br>
+            </div>
+        </div>
+
+        <div style="text-align: left;">
+            <div style="text-align: left;"><br>
+
+              <li> </li>
+              <img style="width: 400px; height: 300px;" src="img/RR.png" alt=""><br>
+              <p>D-EXPOに向け、部活で合同制作したボードゲーム<br>
+                二人用</p>
+              <div style="text-align: left;"><a
+                          href="Creation/CC.zip">
                           ダウンロード</a><br>
                 <br>
             </div>
