--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html><head>
 
     <meta content="text/html;" charset="utf-8" http-equiv="content-type">
-        <title>るみね＿せんす。の創作物置場</title>
+        <title>LaIの創作物置場</title>
         <link rel="shortcut icon" href="../img/favicon.ico" type="image/vnd.microsoft.icon"></link>
         <link rel="stylesheet" type="text/css" href="data.css" /></link>
 
 
 
 </head><body>
-    <big><big>るみね＿せんす。の創作物置場</big></big><br>
+    <big><big>LaIの創作物置場</big></big><br>
     <h1>
         <ul>
             <li>トップページ</li>
@@ -21,7 +21,7 @@
         <div style="text-align: left;">
             <div style="text-align: left;"><br>
                 某大学生が作ったものをただ垂れ流すためのページです。<br>
-                ネット上では「るみね＿せんす。」という名前で活動しています。<br>
+                ネット上では「LaI」という名前で活動しています。<br>
                 <br>
             </div>
         </div>
