--- a/profile.html
+++ b/profile.html
@@ -1,14 +1,14 @@
 <html><head>
 
     <meta content="text/html;" charset="utf-8" http-equiv="content-type">
-        <title>るみね＿せんす。について</title>
+        <title>LaIについて</title>
         <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon"></link>
         <link rel="stylesheet" type="text/css" href="data.css" /></link>
 
 
 
 </head><body>
-    <big><big>るみね＿せんす。の創作物置場</big></big><br>
+    <big><big>LaIの創作物置場</big></big><br>
     <h1>
         <ul>
             <li><a href="index.html">トップページ</a></li>
@@ -22,7 +22,7 @@
             <div style="text-align: left;"><br>
                 <ul>
                     <li>名前</li>
-                    <p>ネット上では「るみね＿せんす。」「るみねっせんす」と発音する。</p>
+                    <p>ネット上では「LaI」「らい」と発音する。</p>
                     <li>年齢</li>
                     <p>明言はしないが大学生とだけ</p>
                     <li>経歴</li>
@@ -41,8 +41,7 @@
                     <li>その他</li>
                     <p>ある程度の真面目さと素直さのある性格であり、基本的にネガティヴ思考<br>
                       大学生なのに大学生らしいことができていないことを強く悩んでいる。<br>
-                      在学中に彼女いない歴＝年齢を脱することを目標としているが、
-                      行動には移せていない。
+                      
 
                     </p>
                 </ul>
