--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,14 @@
 <html><head>
 
     <meta content="text/html;" charset="utf-8" http-equiv="content-type">
-        <title>るみね＿せんす。への問い合わせ</title>
+        <title>LaIへの問い合わせ</title>
         <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon"></link>
         <link rel="stylesheet" type="text/css" href="data.css" /></link>
 
 
 
 </head><body>
-    <big><big>るみね＿せんす。の創作物置場</big></big><br>
+    <big><big>LaIの創作物置場</big></big><br>
     <h1>
         <ul>
             <li><a href="index.html">トップページ</a></li>
