制作物をGoogle Driveに移動、リンクを変更。
CCを追加

--- a/creation.html
+++ b/creation.html
@@ -26,7 +26,7 @@
               <p>Unity学習も兼ねてかなりまったりして4週間くらいで作ったシューティングゲーム。<br>
                 箱1コン対応。</p>
               <div style="text-align: left;"><a
-                          href="Creation/RAYS_RUSH.zip">
+                          href="https://drive.google.com/file/d/0B9mj7JQLei9sNjU2X2t0M0Q0UUE/view?usp=sharing">
                           ダウンロード</a><br>
                 <br>
             </div>
@@ -35,12 +35,12 @@
         <div style="text-align: left;">
             <div style="text-align: left;"><br>
 
-              <li> </li>
-              <img style="width: 400px; height: 300px;" src="img/RR.png" alt=""><br>
+              <li>Circuit Circulator</li>
+              <img style="width: 400px; height: 300px;" src="img/CC.png" alt=""><br>
               <p>D-EXPOに向け、部活で合同制作したボードゲーム<br>
                 二人用</p>
               <div style="text-align: left;"><a
-                          href="Creation/CC.zip">
+                          href="https://drive.google.com/file/d/0B9mj7JQLei9sUDZIRkNmd1RCMlk/view?usp=sharing">
                           ダウンロード</a><br>
                 <br>
             </div>
