画像名を修正

--- a/creation.html
+++ b/creation.html
@@ -36,7 +36,7 @@
             <div style="text-align: left;"><br>
 
               <li>Circuit Circulator</li>
-              <img style="width: 400px; height: 300px;" src="img/CC.png" alt=""><br>
+              <img style="width: 400px; height: 300px;" src="img/CC.PNG" alt=""><br>
               <p>D-EXPOに向け、部活で合同制作したボードゲーム<br>
                 二人用</p>
               <div style="text-align: left;"><a
