--- a/creation.html
+++ b/creation.html
@@ -37,7 +37,7 @@
 
               <li>Circuit Circulator</li>
               <img style="width: 400px; height: 300px;" src="img/CC.png" alt=""><br>
-              <p>D-EXPOに向け、部活で合同制作したボードゲーム<br>
+              <p>大学のイベントに向け、部活内でグループ制作したボードゲーム<br>
                 二人用</p>
               <div style="text-align: left;"><a
                           href="https://drive.google.com/file/d/0B9mj7JQLei9sUDZIRkNmd1RCMlk/view?usp=sharing">
