--- a/creation.html
+++ b/creation.html
@@ -24,10 +24,10 @@
               <li>RAYS_RUSH</li>
               <img style="width: 400px; height: 300px;" src="img/RR.png" alt=""><br>
               <p>Unity学習も兼ねてかなりまったりして4週間くらいで作ったシューティングゲーム。<br>
-                箱1コン対応。</p>
+                箱1コン対応のただのクソゲー</p>
               <div style="text-align: left;"><a
-                          href="https://drive.google.com/file/d/0B9mj7JQLei9sNjU2X2t0M0Q0UUE/view?usp=sharing">
-                          ダウンロード</a><br>
+                          href="https://drive.google.com/file/d/0B9mj7JQLei9sWkVUX0R4LS1UV0E/view?usp=sharing">
+                          ダウンロード(Google Driveに移動します)</a><br>
                 <br>
             </div>
         </div>
@@ -38,10 +38,12 @@
               <li>Circuit Circulator</li>
               <img style="width: 400px; height: 300px;" src="img/CC.png" alt=""><br>
               <p>大学のイベントに向け、部活内でグループ制作したボードゲーム<br>
+                割と自信作<br>
+                LaIは3Dモデリングとゲームルール処理を担当
                 二人用</p>
               <div style="text-align: left;"><a
                           href="https://drive.google.com/file/d/0B9mj7JQLei9sUDZIRkNmd1RCMlk/view?usp=sharing">
-                          ダウンロード</a><br>
+                          ダウンロード(Google Driveに移動します)</a><br>
                 <br>
             </div>
         </div>
