--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div style="text-align: left;">
             <div style="text-align: left;"><br>
                 某大学生が作ったものをただ垂れ流すためのページです。<br>
-                ネット上では「LaI」という名前で活動しています。<br>
+                更新頻度はほぼ無に等しいです。<br>
                 <br>
             </div>
         </div>
