--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,7 @@
             <div style="text-align: left;"><br>
                 <ul>
                     <li>名前</li>
-                    <p>ネット上では「LaI」「らい」と発音する。</p>
+                    <p>「LaI」「らい」と発音する。</p>
                     <li>年齢</li>
                     <p>明言はしないが大学生とだけ</p>
                     <li>経歴</li>
@@ -31,7 +31,7 @@
                     <p>プレイできる(上手いとは言ってない)スポーツは<br>
                       ボウリング、水泳、
                       ソフトテニス、卓球など<br>
-                    スポーツ以外はドライブ、プログラミング(C#とかUnityとか)、<br>
+                    スポーツ以外は読書、プログラミング(C#とかUnityとか)、<br>
                     ドット絵作成、
                     コンピューターゲーム(Z.O.EとかFFとか)、
                     深夜アニメ視聴<br>
@@ -39,9 +39,8 @@
                     <li>活動</li>
                     <p>主な活動は某部活にてかなりまったりゲーム作ってます。</p>
                     <li>その他</li>
-                    <p>ある程度の真面目さと素直さのある性格であり、基本的にネガティヴ思考<br>
-                      大学生なのに大学生らしいことができていないことを強く悩んでいる。<br>
-                      
+                    <p>最近性格心理学に興味を持っている。情報系の片隅にも置けないですね。<br>
+
 
                     </p>
                 </ul>
