--- a/creation.html
+++ b/creation.html
@@ -36,7 +36,7 @@
             <div style="text-align: left;"><br>
 
               <li>Circuit Circulator</li>
-              <img style="width: 400px; height: 300px;" src="img/CC." alt=""><br>
+              <img style="width: 400px; height: 300px;" src="img/CC.png" alt=""><br>
               <p>大学のイベントに向け、部活内でグループ制作したボードゲーム<br>
                 割と自信作<br>
                 LaIは3Dモデリングとゲームルール処理を担当
