--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div style="text-align: left;">
             <div style="text-align: left;"><br>
                 某大学生が作ったものをただ垂れ流すためのページです。<br>
-                更新頻度はほぼ無に等しいです。<br>
+                年に1,2回ほど創作物の追加のために更新します。  <br>
                 <br>
             </div>
         </div>
